新增spring-retry demo代码

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>data-redis</module>
         <module>data-mybatis</module>
         <module>jackson</module>
+        <module>retry</module>
     </modules>
 
     <dependencies>
