--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>1.5.1.RELEASE</version>
     </parent>
 
     <properties>
@@ -29,6 +29,7 @@
         <module>jackson</module>
         <module>retry</module>
         <module>web-jsp</module>
+        <module>testing</module>
     </modules>
 
     <dependencies>
