上传jpa的demo代码

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>retry</module>
         <module>web-jsp</module>
         <module>testing</module>
+        <module>data-jpa</module>
     </modules>
 
     <dependencies>
