--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>web-jsp</module>
         <module>testing</module>
         <module>data-jpa</module>
+        <module>event</module>
     </modules>
 
     <dependencies>
@@ -48,6 +49,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <!-- test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
