--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>data-jpa</module>
         <module>event</module>
         <module>data-querydsl</module>
+        <module>data-gemfire</module>
     </modules>
 
     <dependencies>
