--- a/data-mybatis/src/main/resources/application.yml
+++ b/data-mybatis/src/main/resources/application.yml
@@ -1,14 +1,27 @@
-spring:
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/msg?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+#    username: root
+#    password: root
+#    tomcat:
+#          validation-query: "select 1"
+#          test-on-borrow: true
+#          validation-interval: 30000
+#          remove-abandoned: true
+#          remove-abandoned-timeout: 60
+#          log-abandoned: true
+#          abandon-when-percentage-full: 80
+#          jdbc-interceptors: "ResetAbandonedTimer"
+
+demo:
   datasource:
-    url: jdbc:mysql://localhost:3306/msg?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-    username: root
-    password: root
-    tomcat:
-          validation-query: "select 1"
-          test-on-borrow: true
-          validation-interval: 30000
-          remove-abandoned: true
-          remove-abandoned-timeout: 60
-          log-abandoned: true
-          abandon-when-percentage-full: 80
-          jdbc-interceptors: "ResetAbandonedTimer"
+    master:
+      url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+      username: root
+      password: root
+      driver-class-name: com.mysql.jdbc.Driver
+    slave:
+      url: jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+      username: root
+      password: root
+      driver-class-name: com.mysql.jdbc.Driver
