--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>event</module>
         <module>data-querydsl</module>
         <module>data-gemfire</module>
+        <module>web-thymeleaf</module>
     </modules>
 
     <dependencies>
