thymeleaf设置不校验html标签

--- a/web-thymeleaf/pom.xml
+++ b/web-thymeleaf/pom.xml
@@ -16,5 +16,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <!--NekoHTML库为了支持LEGACYHTML5-->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+        </dependency>
     </dependencies>
 </project>
