--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.1.RELEASE</version>
+        <version>1.5.6.RELEASE</version>
     </parent>
 
     <properties>
@@ -35,6 +35,7 @@
         <module>data-querydsl</module>
         <module>data-gemfire</module>
         <module>web-thymeleaf</module>
+        <module>mq-rabbitMQ</module>
     </modules>
 
     <dependencies>
