--- a/data-elasticsearch/pom.xml
+++ b/data-elasticsearch/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.68.noneautotype</version>
+            <version>2.0.15</version>
         </dependency>
     </dependencies>
 </project>
