--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <module>data-gemfire</module>
         <module>web-thymeleaf</module>
         <module>mq-rabbitMQ</module>
-        <module>data-elasticsearch-client</module>
+        <module>data-elasticsearch</module>
     </modules>
 
     <dependencies>
