--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>web-thymeleaf</module>
         <module>mq-rabbitMQ</module>
         <module>data-elasticsearch</module>
+        <module>web-flux</module>
     </modules>
 
     <dependencies>
