--- a/data-mybatis/pom.xml
+++ b/data-mybatis/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.8.6</version>
+        </dependency>
 
         <!--Swagger2依赖-->
         <dependency>
